grammar.js
    source_file: ($) =>
      seq(
        // drop starting empty lines
        repeat(/\n+/),
        optional(seq(repeat(seq($._expr_top, repeat1(/\n+/))), $._expr_top, repeat(/\n+/))),
      ),
    // f: ($) => seq(repeat(seq($._expr_top, repeat1(/\n+/))), $._expr_top, repeat(/\n+/)),
    // source_file: ($) => $.plus,
    // https://reference.wolfram.com/language/ref/CompoundExpression.html
    _expr_finished: ($) =>
      choice(
        $._parenthesized_expr,
        $._symbol,
        $.blank,
        $.blank_sequence,
        $.blank_null_sequence,
        $.string,
        $.number,

        // op
        $.list,
        $.association,
        $.apply,
        $.part,
      ),
    // _expr_function: ($) => choice($._function),
    // _expr_rep_op: ($) =>
    //   choice(
    //     $.alternatives,
    //     $.message_name,
    //     $.composition,
    //     $.right_composition,
    //     $.equal_ascii,
    //     $.unequal_ascii,
    //     $.greater_ascii,
    //     $.greater_equal_ascii,
    //     $.less_ascii,
    //     $.less_equal_ascii,
    //     $.plus,
    //     $.minus,
    //     $.backslash,
    //     $.diamond,
    //     $.wedge,
    //     $.vee,
    //     $.circle_times,
    //     $.times_ast,
    //     $.times_cross,
    //     $.star,
    //     $.vertical_tilde,
    //     $.coproduct,
    //     $.small_circle,
    //     $.circle_dot,
    //     $.non_commutative_multiply,
    //     $.dot,
    //     $.string_join,
    //   ),
    // _expr_op: ($) =>
    //   choice(
    //     $.part,
    //     $.apply,
    //     $.get,
    //     $.overscript,
    //     $.underscript,
    //     $.underoverscript,
    //     $.overunderscript,
    //     $.subscript,
    //     $.subscript_power,
    //     $.pattern_test,
    //     $.rule_ascii,
    //     $.rule_delayed_ascii,
    //     $.apply_at,
    //     $.tilde,
    //     $.map,
    //     $.map_all,
    //     $.apply_atat,
    //     $.apply_atatat,
    //     $.factorial,
    //     $.factorial2,
    //     $.derivative,
    //     $.power,
    //     $.power_subscript,
    //     $.sqrt,
    //     $.any_root,
    //     $.per,
    //     $.divide,
    //     $.divide_box,
    //     $.circle_plus,
    //     $.circle_minus,
    //     $.plus_minus,
    //   ),
    // _expr_unary_op: ($) =>
    //   choice(
    //     //
    //     $.positive,
    //     $.negative,
    //     $.negative_positive,
    //     $.increment,
    //     $.decrement,
    //     $.pre_increment,
    //     $.pre_decrement,
    //     $.del,
    //   ),
    // _expr_top: ($) => prec.left(seq($._expr1_top, repeat(prec.left($._expr1_top)))),
    // _expr: ($) => prec.left(seq($._expr1, prec.left(repeat($._expr1)))),
    _expr_top: ($) => prec.left(30, choice(seq($._expr1_top, repeat($._expr1_unary_special_top)))),
    _expr_repeat: ($) => seq($._expr, repeat(seq(',', $._expr))),

    // <OPERATORS>

    ...tmp5({
      // <UNARY>

      rule_ascii: ($) => PREC.RULE_ASCII(seq0(EXPR_KEEP, $.rule_ascii_operator, EXPR_KEEP)),
      rule_ascii_operator: ($) => '->',

    apply: ($) =>
      PREC.APPLY(
        seq0($._expr_finished, $.apply_bracket_begin, choice($._expr_repeat, repeat(/\n+/)), $.apply_bracket_end),
      ),
    apply_bracket_begin: ($) => '[',
    apply_bracket_end: ($) => ']',

    part: ($) =>
      PREC.PART(
        seq0($._expr_finished, $.part_bracket_begin, choice($._expr_repeat, repeat(/\n+/)), $.part_bracket_end),
      ),
    part_bracket_begin: ($) => '[[',
    part_bracket_end: ($) => ']]',

    // </OPERATORS>

    user_symbol: ($) => $._lower_identifier,
    builtin_symbol: ($) => $._upper_identifier,

    blank: ($) => /_(?:[a-zA-Z][a-zA-Z0-9]*)?/,
    blank_sequence: ($) => /__(?:[a-zA-Z][a-zA-Z0-9]*)?/,
    blank_null_sequence: ($) => /___(?:[a-zA-Z][a-zA-Z0-9]*)?/,

    number: ($) =>
      /((([2-9]|[1-2]\d|[3][0-5])\^\^(\w*\.\w+|\w+\.\w*|\w+))|(\d*\.\d+|\d+\.\d*|\d+))((``(\+|-)?(\d*\.\d+|\d+\.\d*|\d+))|(`((\+|-)?(\d*\.\d+|\d+\.\d*|\d+))?))?(\*\^(\+|-)?\d+)?/,

    _lower_identifier: ($) => /[a-z][a-zA-Z0-9]*/,
    _upper_identifier: ($) => /[A-Z][a-zA-Z0-9]*/,
  },
});
